--- a/front/src/app/homepage/main-screen/main-screen.component.css
+++ b/front/src/app/homepage/main-screen/main-screen.component.css
@@ -1,3 +1,8 @@
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .list-item{
     display: flex;
     justify-content: space-between;
@@ -5,4 +10,17 @@
 
 button {
     max-width: 120px;
+}
+
+.modal-signup {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  flex-direction: column;
 }
