--- a/front/src/app/homepage/register/register.component.html
+++ b/front/src/app/homepage/register/register.component.html
@@ -1,16 +1,17 @@
 <article class="register-component">
     <header>
         Inscription
+        <div *ngIf="isExtern">Externe</div>
     </header>
     <form [formGroup]="registerForm" (submit)="onSubmit()">
-        <input 
+        <input
             id="register-username"
             type="text"
             formControlName="username"
             placeholder="Pseudo"
         >
-        <select 
-            formControlName="role" 
+        <select
+            formControlName="role"
             id="register-role"
         >
             <option value="Guerrier">Guerrier</option>
@@ -19,17 +20,17 @@
             <option value="Espions">Espions</option>
             <option value="Enchanteur">Enchanteur</option>
         </select>
-        <input 
-            id="register-password" 
-            type="password" 
+        <input
+            id="register-password"
+            type="password"
             formControlName="password"
-            placeholder="Mot de passe"    
+            placeholder="Mot de passe"
         >
-        <input 
-            id="register-confirm-password" 
-            type="password" 
+        <input
+            id="register-confirm-password"
+            type="password"
             formControlName="confirmPassword"
-            placeholder="Confirmer mot de passe"    
+            placeholder="Confirmer mot de passe"
         >
         <button type="submit" [disabled]="!registerForm.valid">Register</button>
     </form>
