--- a/front/src/app/toast/toast.component.css
+++ b/front/src/app/toast/toast.component.css
@@ -5,7 +5,8 @@
     border-radius: 4px;
     transform: translateX(-50%);
     left: 50%;
-    top: 52px
+    top: 52px;
+    z-index: 100;
 }
 
 .success {
